fixed mobile navigation alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,7 @@ a{
 .header .open-nav-menu{
 	height: 34px;
 	width: 40px;
-	margin-right: 15px;
+	margin-right: 0px;
 	display: none;
 	align-items: center;
 	justify-content: center;
